# pr2_eih_ros

./: .gitignore  README.md
ar_kinect/include/ar_kinect/: ar_kinect.h
ar_kinect/src/: ar_kinect.cpp
boundary_detection/: CMakeLists.txt  package.xml
boundary_detection/src/: boundary_detection.cpp  generate_boundary_pointcloud.cpp
experiment_logger/: CMakeLists.txt  package.xml
experiment_logger/data/: logfile_processor.py
experiment_logger/data/bsp_bathroom/: bsp_bathroom14.txt  bsp_bathroom18.txt  bsp_bathroom8.txt
experiment_logger/data/bsp_bathroom/ignore/: bsp_bathroom19.txt  bsp_bathroom2.txt  bsp_bathroom3.txt  bsp_bathroom4.txt  bsp_bathroom7.txt
experiment_logger/data/bsp_kitchen/: bsp_kitchen1.txt  bsp_kitchen10.txt  bsp_kitchen2.txt  bsp_kitchen3.txt  bsp_kitchen5.txt  bsp_kitchen8.txt  bsp_kitchen9.txt
experiment_logger/data/bsp_shelf/: bsp_shelf10.txt  bsp_shelf2.txt  bsp_shelf4.txt  bsp_shelf5.txt  bsp_shelf6.txt
experiment_logger/data/sampling_bathroom/: sampling_100_bathroom5.txt  sampling_50_bathroom9.txt
experiment_logger/data/sampling_bathroom/ignore/: sampling_10_bathroom3.txt  sampling_10_bathroom7.txt  sampling_50_bathroom1.txt  sampling_50_bathroom4.txt  sampling_50_bathroom5.txt
experiment_logger/data/sampling_bathroom/sampling10/: sampling_10_bathroom10.txt  sampling_10_bathroom12.txt  sampling_10_bathroom13.txt  sampling_10_bathroom15.txt  sampling_10_bathroom16.txt  sampling_10_bathroom17.txt  sampling_10_bathroom9.txt
experiment_logger/data/sampling_bathroom/sampling100/: sampling_100_bathroom1.txt  sampling_100_bathroom10.txt  sampling_100_bathroom2.txt  sampling_100_bathroom8.txt  sampling_100_bathroom9.txt
experiment_logger/data/sampling_bathroom/sampling200/: sampling_200_bathroom1.txt  sampling_200_bathroom2.txt  sampling_200_bathroom3.txt  sampling_200_bathroom4.txt  sampling_200_bathroom9.txt
experiment_logger/data/sampling_bathroom/sampling50/: sampling_50_bathroom10.txt  sampling_50_bathroom11.txt  sampling_50_bathroom12.txt  sampling_50_bathroom13.txt  sampling_50_bathroom14.txt
experiment_logger/scripts/: bathroom1.txt  bathroom10.txt  bathroom11.txt  bathroom12.txt  bathroom13.txt  bathroom15.txt  bathroom16.txt  bathroom17.txt  bathroom5.txt  bathroom6.txt  bathroom9.txt  bsp_kitchen4.txt  bsp_kitchen6.txt  bsp_kitchen7.txt  bsp_shelf1.txt  bsp_shelf3.txt  bsp_shelf7.txt  bsp_shelf8.txt  bsp_shelf9.txt  log_messages.py  logfile_processor.py  manual_logger.py  sampling_100_bathroom1.txt  sampling_100_bathroom3.txt  sampling_100_bathroom4.txt  sampling_100_bathroom6.txt  sampling_100_bathroom7.txt  sampling_100_kitchen10.txt  sampling_100_kitchen7.txt  sampling_10_bathroom1.txt  sampling_10_bathroom11.txt  sampling_10_bathroom12.txt  sampling_10_bathroom2.txt  sampling_10_bathroom8.txt  sampling_10_bathroom9.txt  sampling_10_kitchen1.txt  sampling_10_kitchen10.txt  sampling_10_kitchen2.txt  sampling_10_kitchen3.txt  sampling_10_kitchen5.txt  (+25 more)
handle_detector/: CMakeLists.txt  package.xml
handle_detector/include/handle_detector/: affordances.h  curvature_estimation_taubin.h  cylindrical_shell.h  sampling.h  visualizer.h
handle_detector/launch/: carmine_handle_detector.launch  handle_detector.launch  kinfu_handle_detector.launch  kinfu_occlusion_handle_detector.launch  kinfu_raycast_handle_detector.launch  localization_sensor.launch  pcd_handle_detector.launch
handle_detector/scripts/: affordance_publisher.py  handle_poses_publisher.py
handle_detector/src/: affordances.cpp  cylindrical_shell.cpp  handle_detector.cpp  importance_sampling.cpp  localization.cpp  sampling.cpp
kinect_transform/: CMakeLists.txt  package.xml
kinect_transform/launch/: ar_hand.launch  carmine_registration.launch  static_transforms.launch  wrist_to_hand.launch
kinect_transform/src/: kinect_transform.py
kinfu/: CMakeLists.txt  package.xml
kinfu/launch/: kinfu.launch
kinfu/src/: kinfu.cpp
pcl_utils/: CMakeLists.txt  package.xml
pcl_utils/include/: cluster_projection.h  occluded_region_finder.h  pointcloud_voxel_grid.h  timer.h  tsdf_converter.h
pcl_utils/include/pcl_utils/: cluster_extraction.h  cluster_projection.h  occluded_region_finder.h  plane_recognition.h  pointcloud_voxel_grid.h  tsdf_converter.h
pcl_utils/launch/: kinfu.launch  occlusion_parameters.launch  occlusion_parameters.yaml
pcl_utils/msg/: BoundingBox.msg  Gaussian.msg  OccludedRegion.msg  OccludedRegionArray.msg
pcl_utils/src/: cluster_extraction.cpp  cluster_projection.cpp  convert_pcd.cpp  find_empty_voxels.cpp  generate_boundary_pointcloud.cpp  kinfu.cpp  moment_of_intertia.cpp  occluded_region_finder.cpp  occluded_region_finder_standalone.cpp  plane_recognition.cpp  pointcloud_voxel_grid.cpp  save_weight_cloud.cpp  tsdf_converter.cpp
plane_recognition/: CMakeLists.txt  package.xml
plane_recognition/src/: plane_recognition.cpp
pointcloud_publisher/: CMakeLists.txt  package.xml
pointcloud_publisher/src/: carmine.cpp  carmine_base_link.cpp
pr2_utils/: CMakeLists.txt  package.xml  setup.py
pr2_utils/include/pr2_utils/geometry/: geometry2d.h  (+1 more)
pr2_utils/python/geometry/: geometry3d.py
pr2_utils/python/pr2/: arm.py  convexify_pointcloud.py  planner.py
pr2_utils/python/pr2_sim/: arm.py  camera.py  simulator.py
pr2_utils/robots/: my-pr2-beta-sim.robot.xml
pr2_utils/src/geometry/: geometry2d.py  geometry3d.py
pr2_utils/src/pr2_sim/: arm.py  camera.py  simulator.py
pr2_utils/tests/: geometry_geometry2d.cpp  geometry_geometry2d.py  geometry_geometry3d.cpp  geometry_geometry3d.py  gradient_sd.cpp  gradient_sd.py  pr2_arm.py  pr2_convexify_pointcloud.py  pr2_planner.py  pr2_sim_arm.cpp  pr2_sim_arm.py  pr2_sim_camera.cpp  pr2_sim_camera.py  pr2_sim_simulator.cpp  test_arm.cpp
tfx/.hg/: dirstate  hgrc
tfx/.hg/cache/: branchheads  tags
tfx/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
tfx/include/tfx/: tb_angles.h
tfx/scripts/: load_tf  pose_publisher  publisher  save_tf  tf_echo  tf_publisher  topic_echo
tfx/src/tfx/: __init__.py  adjustable_static_pub.py  canonical.py  parsing.py  tb_angles.py  tf_io.py
(+83 files in other folders)
