<?xml version="1.0"?>
<package>
  <name>boundary_detection</name>
  <version>0.0.0</version>
  <description>The boundary detection package</description>
  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>TODO</license>
  <build_depend>roscpp</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>