<?xml version="1.0"?>
<package>
  <name>pcl_utils</name>
  <version>0.0.0</version>
  <description>The boundary detection package</description>
  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
  <build_depend>pcl</build_depend>
   <build_depend>pcl_ros</build_depend>
  <run_depend>roscpp</run_depend>
   <run_depend>pcl</run_depend>
   <run_depend>pcl_ros</run_depend>
</package>
